src/main/resources/kube/k8s/k8s-github/middle/elasticsearch-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: registry.cn-qingdao.aliyuncs.com/king019/elasticsearch:8.8.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: p9920
              containerPort: 9920
              protocol: TCP
            - name: p9930
              containerPort: 9930
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  ports:
    - name: p9920
      port: 9920
      targetPort: 9920
      protocol: TCP
    - name: p9930
      port: 9930
      targetPort: 9930
      protocol: TCP
  selector:
    app: elasticsearch
