src/main/resources/kube/k8s/k8s-github/middle/pushgateway-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
        - name: pushgateway
          image: prom/pushgateway:master
          imagePullPolicy: IfNotPresent
          ports:
            - name: p9091
              containerPort: 9091
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
spec:
  ports:
    - name: p9091
      port: 9091
      targetPort: 9091
      protocol: TCP
  selector:
    app: pushgateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: pushgateway.k8s.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pushgateway
                port:
                  number: 9091
